third_party/move/move-compiler-v2/tests/folding/break_constant.exp

Diagnostics:
error: Not a valid constant expression.
  ┌─ tests/folding/break_constant.move:3:21
  │
3 │     const C : u64 = break;
  │                     ^^^^^
  │                     │
  │                     Invalid statement or expression in constant
